--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["MathxH Chen <brainfvck@foxmail.com>"]
 edition = "2018"
-name = "vdf-go-wrapper"
+name = "vdf-ffi"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
